added routes and swagger api
